--- a/html/socials.html
+++ b/html/socials.html
@@ -103,11 +103,11 @@
             <div class="sec Footer-quicklinks">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Socials</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="/html/aboutme.html">About</a></li>
+                    <li><a href="/html/projects.html">FAQ</a></li>
+                    <li><a href="/html/projects.html">Projects</a></li>
+                    <li><a href="/html/socials.html">Socials</a></li>
+                    <li><a href="/html/socials.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="sec Footer-contact">
@@ -123,7 +123,7 @@
                                     4h17.527l-2-4h-3.131c.435-.691.848-1.359 1.232-2h3.136l4 8z" />
                             </svg>
                         </span>
-                        <p>Hikmat Imanov<br>Weingarten, 82250, Germany </p>
+                        <p>Multroid Technologies<br>Munich, Germany </p>
                     </li>
                     <li>
                         <span>
@@ -137,7 +137,7 @@
                                     7.68l2.399-1.179 3.816 7.36s-2.36 1.162-2.476 1.215c-.547.251-1.129.376-1.733.376" />
                             </svg>
                         </span>
-                        <p><a href="tel:+4915222912285">+49 152 22912285</a></p>
+                        <p><a href="tel:+4915222912285">Whatsapp:<br>+49 152 22912285</a></p>
                     </li>
                     <li>
                         <span>
@@ -146,7 +146,7 @@
                                     d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z" />
                             </svg>
                         </span>
-                        <p><a href="mailto:hikistark@gmail.com">hikistark@gmail.com</a></p>
+                        <p><a href="mailto:hikistark@gmail.com">support@multroid.com</a></p>
                     </li>
                 </ul>
             </div>
