--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
         </div>
         <div class="Mission-section row">
             <div class="col Mission-section-col1">
-                <h2 class="Mission-section-header">Open Source.</h2>
-                <p class="Mission-section-paragraph">From time to time I like to start new projects that has potential
-                    to become the NEXT THING.
-                    Below are three of my most recent project.</p>
+                <h2 class="Mission-section-header">Current Stage: Prototyping & Seeking Investors</h2>
+                <p class="Mission-section-paragraph">
+                    We're excited to announce that our innovative modular robotics project has reached the final stages
+                    of prototyping
+                    phase. Our dedicated team is working diligently to refine our technology, ensuring that we bring the
+                    most reliable and efficient automation solutions to the market.
+                    <br><br>To accelerate our progress and bring our vision to life, we are actively seeking investors who
+                    share our passion for transforming the future of automation. If you're interested in partnering with
+                    us and being part of this groundbreaking journey, we'd love to hear from you.
+                </p>
             </div>
             <div class="col polka-background Mission-section-placeholder"></div>
         </div>
@@ -54,12 +60,12 @@
                 </h2>
                 <div>
                     <p>
-                        From single task robots to fully automated robotic systems, single-page apps to something more
-                        complex like Website with Blockchain implementation. I help awesome people to build ambitious
-                        yet accessible projects - the wilder, the better.
+                        Take the first step towards a more efficient and innovative future. By collaborating with us,
+                        you'll gain access to our state-of-the-art modular robotics technology, designed to seamlessly
+                        integrate into your processes and dramatically enhance precision and performance.
                     </p>
-                    <a href="/work" class="btn-md">
-                        <span class="btn-label">About my approach</span>
+                    <a href="mailto:support@multroid.com" class="btn-md">
+                        <span class="btn-label">Contact Us Today</span>
                     </a>
                 </div>
             </div>
@@ -96,10 +102,10 @@
                 <h3>About me</h3>
                 <p></p>
                 <ul class="sci">
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><svg class="fa fa-linkedin-in" xmlns="http://www.w3.org/2000/svg" width="24"
+                    <li><a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><svg class="fa-brands fa-linkedin-in" xmlns="http://www.w3.org/2000/svg" width="24"
                                 height="24" viewBox="0 0 24 24">
                                 <path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 
                             1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 
@@ -112,11 +118,11 @@
             <div class="sec Footer-quicklinks">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Socials</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="/html/aboutme.html">About</a></li>
+                    <li><a href="/html/projects.html">FAQ</a></li>
+                    <li><a href="/html/projects.html">Projects</a></li>
+                    <li><a href="/html/socials.html">Socials</a></li>
+                    <li><a href="/html/socials.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="sec Footer-contact">
@@ -132,7 +138,7 @@
                                     4h17.527l-2-4h-3.131c.435-.691.848-1.359 1.232-2h3.136l4 8z" />
                             </svg>
                         </span>
-                        <p>Hikmat Imanov<br>Weingarten, 82250, Germany </p>
+                        <p>Multroid Technologies<br>Munich, Germany </p>
                     </li>
                     <li>
                         <span>
@@ -146,7 +152,7 @@
                                     7.68l2.399-1.179 3.816 7.36s-2.36 1.162-2.476 1.215c-.547.251-1.129.376-1.733.376" />
                             </svg>
                         </span>
-                        <p><a href="tel:+4915222912285">+49 152 22912285</a></p>
+                        <p><a href="tel:+4915222912285">Whatsapp:<br>+49 152 22912285</a></p>
                     </li>
                     <li>
                         <span>
@@ -155,7 +161,7 @@
                                     d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.574l-12-9.725v15.438h24v-15.438l-12 9.725z" />
                             </svg>
                         </span>
-                        <p><a href="mailto:hikistark@gmail.com">hikistark@gmail.com</a></p>
+                        <p><a href="mailto:hikistark@gmail.com">support@multroid.com</a></p>
                     </li>
                 </ul>
             </div>
