Changed the Socials links

--- a/html/socials.html
+++ b/html/socials.html
@@ -48,11 +48,11 @@
                         class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Multroid" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/hiki_stark/" class="btn-md noMargin" target="_blank"><i
+                <a href="https://www.instagram.com/multroid/" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
                 <a href="https://twitter.com/hikmat_imanov" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.youtube.com/channel/UCtlt86oUcCETffel9-lNJYw" class="btn-md noMargin"
+                <a href="http://www.youtube.com/@Multroid" class="btn-md noMargin"
                     target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
