--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="css/predefinitions.css">
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/socials-style.css">
+    <!-- <link rel="stylesheet" href="css/projects-style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <body>
     <header>
@@ -29,15 +31,34 @@
     </header>
 
     <div class="container">
+
         <div class="Hero-section row">
             <div class="Hero-section-text col">
                 <h1 class="heading-1">Precision Automation:<br>Modularity Redefined</h1>
                 <p><b>Adaptable automation</b> tailored for your industry's unique demands.</p>
             </div>
-            <!-- <div class="Hero-section-animation col">
-                <img src="media/robot-pic-1.png">
-            </div> -->
         </div>
+
+        <div class="projects">
+            <div class="project">
+                <img src="media/Armatronex.png" alt="Project 1">
+                <h3>Armatron</h3>
+                <p>Elevate your production line with <strong>Armatron</strong>, the next-gen modular robotic arm system.
+                    Engineered to natively support Bing Promo AI, it seamlessly integrates advanced problem-solving
+                    algorithms, ensuring a smarter, more efficient manufacturing process.
+                </p>
+                <a href="#project1">Coming Soon!!!</a>
+            </div>
+            <div class="project">
+                <img src="media/promoaiex.jpg" alt="Project 2">
+                <h3>Promo AI</h3>
+                <p>Discover <strong>Promo AI</strong>, your smart solution for a flawless manufacturing process. It
+                    identifies issues and implements solutions in real-time, boosting productivity and ensuring
+                    continuous operation. Propel your production into the future with <strong>Promo AI</strong>.</p>
+                <a href="#project2">Coming Soon!!!</a>
+            </div>
+        </div>
+
         <div class="Mission-section row">
             <div class="col Mission-section-col1">
                 <h2 class="Mission-section-header">Current Stage: Prototyping & Seeking Investors</h2>
@@ -46,7 +67,8 @@
                     of prototyping
                     phase. Our dedicated team is working diligently to refine our technology, ensuring that we bring the
                     most reliable and efficient automation solutions to the market.
-                    <br><br>To accelerate our progress and bring our vision to life, we are actively seeking investors who
+                    <br><br>To accelerate our progress and bring our vision to life, we are actively seeking investors
+                    who
                     share our passion for transforming the future of automation. If you're interested in partnering with
                     us and being part of this groundbreaking journey, we'd love to hear from you.
                 </p>
