--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
 <head>
     <meta charset="utf-8">
     <title>MULTROID</title>
+    <link rel="icon" type="image/x-icon" href="/media/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/media/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicons/favicon-16x16.png">
+    <link rel="mask-icon" href="/media/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/predefinitions.css">
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/socials-style.css">
-    <!-- <link rel="stylesheet" href="css/projects-style.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
