changed some infos on projects

--- a/html/projects.html
+++ b/html/projects.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/predefinitions.css">
     <link rel="stylesheet" href="/css/main-style.css">
     <link rel="stylesheet" href="/css/projects-style.css">
+    <link rel="stylesheet" href="/css/socials-style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="/media/js/brands.js"></script>
     <script defer src="/media/js/solid.js"></script>
@@ -37,24 +38,34 @@
             <div class="Projectsp-Header">
                 <h1>Our Work</h1>
             </div>
+            <div class="Projectsp-Card-type">
+                <p>Coming Soon !</p>
+            </div>
             <div class="Projectsp-Grid1">
                 <div class="Projectsp-Project-Card item1">
                     <div class="Projectsp-Card">
-                        <h2>Coming Soon!!!</h2>
-                        <p>Stay tuned! We're working tirelessly to bring our game-changing modular robotics solutions to
-                            the market. Our cutting-edge technology will revolutionize the way automation is integrated
-                            into various industries. Sign up for updates and be the first to know when we launch!</p>
+                        <h2>Armatron</h2>
+                        <p>Armatron is a versatile modular robotic arm engineered for industrial automation. It offers
+                            precision, efficiency, and flexibility, making it suitable for a wide range of applications.
+                            Armatron is designed to enhance productivity and operational efficiency in industrial
+                            settings.<br><br>
+                            Additionally, both Promo AI and Synergy AI can be seamlessly integrated into Armatron and
+                            other robotic platforms, enhancing their capabilities and providing intelligent automation
+                            solutions.<br>
+
+                        </p>
                     </div>
                 </div>
                 <div class="Projectsp-Project-Card item2">
                     <div class="Projectsp-Card">
-                        <div class="Projectsp-Card-type">
-                            <p>Mechanical</p>
-                        </div>
-                        <h2>Coming Soon!!!</h2>
-                        <p>Stay tuned! We're working tirelessly to bring our game-changing modular robotics solutions to
-                            the market. Our cutting-edge technology will revolutionize the way automation is integrated
-                            into various industries. Sign up for updates and be the first to know when we launch!</p>
+                        <h2>Promo AI</h2>
+                        <p>Promo AI is an economical solution designed to provide a robust foundation for organizations
+                            seeking to incorporate AI technology efficiently. This solution is ideal for businesses
+                            aiming to harness AI capabilities with minimal initial investment while maintaining high
+                            performance and reliability.<br><br>
+                            Promo AI is designed to be scalable and adaptable, ensuring it
+                            can grow alongside your business needs.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -62,13 +73,16 @@
             <div class="Projectsp-Grid2">
                 <div class="Projectsp-Project-Card item3">
                     <div class="Projectsp-Card">
-                        <h2>Coming Soon!!!</h2>
-                        <p>Stay tuned! We're working tirelessly to bring our game-changing modular robotics solutions to
-                            the market. Our cutting-edge technology will revolutionize the way automation is integrated
-                            into various industries. Sign up for updates and be the first to know when we launch!</p>
+                        <h2>SynergyAI</h2>
+                        <p>Synergy AI is our flagship product, representing the pinnacle of our AI development. This
+                            state-of-the-art, fully automated system continuously self-optimizes by learning from past
+                            tasks and errors. Synergy AI ensures unparalleled performance and adaptability, making it
+                            perfect for advanced, dynamic applications. It is equipped with advanced algorithms and
+                            machine learning capabilities, offering superior accuracy and efficiency.
+                        </p>
                     </div>
                 </div>
-                <div class="Projectsp-Project-Card item4">
+                <!-- <div class="Projectsp-Project-Card item4">
                     <div class="Projectsp-Card">
                         <h2>Coming Soon!!!</h2>
                         <p>Stay tuned! We're working tirelessly to bring our game-changing modular robotics solutions to
@@ -83,10 +97,24 @@
                             the market. Our cutting-edge technology will revolutionize the way automation is integrated
                             into various industries. Sign up for updates and be the first to know when we launch!</p>
                     </div>
-                </div>
+                </div> -->
             </div>
 
+            <div class="Contact-me-container" id="contact">
+
+                <h2 class="Contact-me-Header"><b>Stay tuned!</b></h2>
+
+                <form action="https://getform.io/f/ee6d4af7-da12-41f0-a2cf-a9d10af9a7f8" method="POST"
+                    name="myemailform" class="Contact-me-input-container">
+                    <div class="Pos-relative">
+                        <label class="Contact-me-input-label">Email</label>
+                        <input class="Contact-me-input" type="text" name="Email" required>
+                    </div>
+                    <button type="submit" value="Send Form" class="btn-md Contact-me-button">Subscribe</button>
+                </form>
+            </div>
         </div>
+    </div>
     </div>
 
     <footer>
